src/snapshots/csvs_convert__tests__parquet.snap
---
source: src/lib.rs
assertion_line: 1011
expression: data
---
- - id
  - "1.0"
- - title
  - game1_add_resource
- - id
  - "2.0"
- - title
  - game2_add_resource

